// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Applies a title attribute to the button if props.label is provided 1`] = `
<button
  className="b502wo9"
  onClick={[Function]}
  title="view your kitties"
  type="button"
>
  <span
    className="ajoca6s default"
    style={
      Object {
        "height": "123px",
        "width": "123px",
      }
    }
  >
    <span
      className="igxbmuu icon dwtruy8"
      data-cy="avatar-default-"
    >
      <svg
        aria-hidden="true"
        aria-labelledby=" "
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 11.125a5.067 5.067 0 01-5.06-5.063A5.067 5.067 0 0112 1c2.79 0 5.06 2.271 5.06 5.062A5.067 5.067 0 0112 11.125zM12 3a3.06 3.06 0 10.001 6.121A3.06 3.06 0 0012 3.001zM11.99 15.006c4.41 0 7.98 2.302 8.01 4.993H4v-.07c.12-2.741 3.63-4.923 7.99-4.923zm0-2c-5.44 0-9.85 3.071-9.99 6.883V20C2 21.1 2.9 22 4 22h16c1.09 0 1.98-.88 2-1.97-.04-3.883-4.5-7.025-10.01-7.025z"
        />
      </svg>
    </span>
  </span>
</button>
`;

exports[`Avatar applies a css class name to the button element if props.className is provided 1`] = `
<button
  className="b502wo9 pickles"
  onClick={[Function]}
  title="view your kitties"
  type="button"
>
  <span
    className="ajoca6s default"
    style={
      Object {
        "height": "123px",
        "width": "123px",
      }
    }
  >
    <span
      className="igxbmuu icon dwtruy8"
      data-cy="avatar-default-"
    >
      <svg
        aria-hidden="true"
        aria-labelledby=" "
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 11.125a5.067 5.067 0 01-5.06-5.063A5.067 5.067 0 0112 1c2.79 0 5.06 2.271 5.06 5.062A5.067 5.067 0 0112 11.125zM12 3a3.06 3.06 0 10.001 6.121A3.06 3.06 0 0012 3.001zM11.99 15.006c4.41 0 7.98 2.302 8.01 4.993H4v-.07c.12-2.741 3.63-4.923 7.99-4.923zm0-2c-5.44 0-9.85 3.071-9.99 6.883V20C2 21.1 2.9 22 4 22h16c1.09 0 1.98-.88 2-1.97-.04-3.883-4.5-7.025-10.01-7.025z"
        />
      </svg>
    </span>
  </span>
</button>
`;
